--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 body {
     font-family: "Bellota", sans-serif;
     background: #F8F0E3;
-    background-image: url(../images/abelhas.png);
+    background-image: url(../images/fundoabelhas.png);
     background-blend-mode: color-burn;
     color: black;
     display: flex;
